加了个菜单 读代码、、、

--- a/Mini3D/Mini3D.vcxproj.filters
+++ b/Mini3D/Mini3D.vcxproj.filters
@@ -38,5 +38,13 @@
     <ClInclude Include="vector.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="resource1.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Mini3D1.rc">
+      <Filter>资源文件</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
