--- a/Mini3D/Mini3D.vcxproj
+++ b/Mini3D/Mini3D.vcxproj
@@ -154,7 +154,11 @@
   <ItemGroup>
     <ClInclude Include="device.h" />
     <ClInclude Include="matrix.h" />
+    <ClInclude Include="resource1.h" />
     <ClInclude Include="vector.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Mini3D1.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
