发现个bug:沿z轴看向0点什么也不显示！！

--- a/Mini3D/Mini3D.vcxproj
+++ b/Mini3D/Mini3D.vcxproj
@@ -146,12 +146,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="bmpoper.cpp" />
     <ClCompile Include="device.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="matrix.cpp" />
     <ClCompile Include="vector.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="bmpoper.h" />
     <ClInclude Include="device.h" />
     <ClInclude Include="matrix.h" />
     <ClInclude Include="resource1.h" />
