--- a/Mini3D/Mini3D.vcxproj.filters
+++ b/Mini3D/Mini3D.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="vector.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="bmpoper.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="device.h">
@@ -39,6 +42,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="resource1.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="bmpoper.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
